# SSC

TEEEngine/: Cargo.toml  query_events.sh  register_tee.sh
TEEEngine/src/: main.rs
soroban-secret-compute/: README.md
soroban-secret-compute/contracts/Staking/: Cargo.toml
soroban-secret-compute/contracts/Staking/src/: lib.rs  test.rs
soroban-secret-compute/contracts/attestationservice/: Cargo.toml  README.md
soroban-secret-compute/contracts/attestationservice/src/: lib.rs  test.rs
soroban-secret-compute/contracts/keymanagement/: Cargo.toml
soroban-secret-compute/contracts/keymanagement/src/: lib.rs  test.rs
soroban-secret-compute/contracts/shared/src/: lib.rs
