[package]
name = "TEEEngine"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "22.0.1" }
reqwest = { version = "0.12", features = ["blocking", "json"] }  # For blocking HTTP requests
serde = { version = "1.0", features = ["derive"] }  # For serialization/deserialization with the derive feature
serde_json = "1.0"  # For JSON serialization/deserialization
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
soroban-client = "0.4.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }
